--- a/app/src/main/res/drawable/ic_new_group.xml
+++ b/app/src/main/res/drawable/ic_new_group.xml
@@ -1,10 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
-  <path
-      android:pathData="M10.833,11.667c2.298,0 4.167,1.869 4.167,4.166L15,17.5c0,0.46 -0.373,0.833 -0.833,0.833 -0.461,0 -0.834,-0.372 -0.834,-0.833v-1.667c0,-1.378 -1.121,-2.5 -2.5,-2.5L4.167,13.333c-1.379,0 -2.5,1.122 -2.5,2.5L1.667,17.5c0,0.46 -0.374,0.833 -0.834,0.833 -0.46,0 -0.833,-0.372 -0.833,-0.833v-1.667c0,-2.297 1.87,-4.166 4.167,-4.166h6.666zM16.875,11.802c1.84,0.475 3.124,2.133 3.125,4.03L20,17.5c0,0.46 -0.372,0.833 -0.833,0.833 -0.461,0 -0.834,-0.372 -0.834,-0.833v-1.667c0,-1.138 -0.771,-2.133 -1.875,-2.418 -0.445,-0.115 -0.713,-0.57 -0.598,-1.015 0.115,-0.446 0.57,-0.717 1.015,-0.598zM7.5,1.667c2.297,0 4.167,1.869 4.167,4.166C11.667,8.131 9.797,10 7.5,10 5.202,10 3.333,8.13 3.333,5.833 3.333,3.536 5.203,1.667 7.5,1.667zM13.54,1.8c2.226,0.57 3.573,2.844 3.003,5.07 -0.378,1.475 -1.528,2.626 -3.003,3.003 -0.07,0.018 -0.14,0.026 -0.207,0.026 -0.371,0 -0.711,-0.25 -0.807,-0.627 -0.114,-0.446 0.155,-0.9 0.6,-1.014 0.885,-0.227 1.577,-0.917 1.802,-1.802 0.342,-1.335 -0.466,-2.7 -1.801,-3.041 -0.446,-0.114 -0.715,-0.569 -0.601,-1.014 0.114,-0.446 0.57,-0.716 1.014,-0.601zM7.5,3.333c-1.378,0 -2.5,1.122 -2.5,2.5 0,1.379 1.122,2.5 2.5,2.5s2.5,-1.121 2.5,-2.5c0,-1.378 -1.122,-2.5 -2.5,-2.5z"
-      android:fillColor="#FFF"
-      android:fillType="evenOdd"/>
+<vector android:height="24dp" android:tint="#FFFFFF"
+    android:viewportHeight="24.0" android:viewportWidth="24.0"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M16,11c1.66,0 2.99,-1.34 2.99,-3S17.66,5 16,5c-1.66,0 -3,1.34 -3,3s1.34,3 3,3zM8,11c1.66,0 2.99,-1.34 2.99,-3S9.66,5 8,5C6.34,5 5,6.34 5,8s1.34,3 3,3zM8,13c-2.33,0 -7,1.17 -7,3.5L1,19h14v-2.5c0,-2.33 -4.67,-3.5 -7,-3.5zM16,13c-0.29,0 -0.62,0.02 -0.97,0.05 1.16,0.84 1.97,1.97 1.97,3.45L17,19h6v-2.5c0,-2.33 -4.67,-3.5 -7,-3.5z"/>
 </vector>
